[tool.poetry]
name = "speech-analytics"
version = "0.1.0"
description = ""
authors = ["marccgrau <marcgrau@outlook.com>"]
readme = "README.md"
packages = [{include = "speech_analytics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
