[tool.poetry]
name = "speech-analytics"
version = "0.1.0"
description = ""
authors = ["marccgrau <marcgrau@outlook.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
